# raffle-room-api-service

./: .gitignore  Cargo.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: draw.rs  draw_item.rs  joined_user.rs  lib.rs  room.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240616_154809_create_room.rs  m20240618_151811_create_joined_user.rs  m20240618_151824_create_draw.rs  m20240618_151832_create_draw_item.rs
src/: config.rs  db.rs  main.rs  models.rs  router.rs  routers.rs
src/common/: structs.rs
src/domain/: mapper.rs  mod.rs  structs.rs
src/framework/middleware/: auth_middleware.rs
src/models/: draw.rs  draw_item.rs  joined_user.rs  room.rs
src/repository/: draw.rs  draw_item.rs  joined_user.rs  room.rs  structs.rs
src/router/: draw.rs  draw_item.rs  joined_user.rs  mod.rs  room.rs
src/router/dto/request/: draw_item.rs  joined_user.rs  mod.rs  room.rs
src/router/dto/response/: draw.rs  draw_item.rs  joined_user.rs  mod.rs  room.rs
src/routers/: draw.rs  draw_items.rs  joined_user.rs  room.rs
src/service/: draw.rs  draw_item.rs  joined_user.rs  mod.rs  room.rs  structs.rs
