[package]
name = "raffle-room"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = {version = "^0.12.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
chrono = { version = "0.4", features = ["serde"] }
entity = { path = "entity" }
migration = { path = "migration" }
rand = "0.8.5"

